<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="42dp"
    android:background="@color/twitter_blue"
    tools:context="org.tejen.codepathandroid.twitter.activities.LoginActivity" >

    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="40dp"
        android:layout_height="40dp"
        app:srcCompat="@drawable/ic_twitter_logo_vector"
        android:contentDescription="@string/twitter_logo_content_description" />

    <TextView
        android:id="@+id/tvWelcome"
        android:paddingTop="68dp"
        android:textSize="40sp"
        android:layout_width="wrap_content"
        android:textStyle="bold"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:text="@string/welcome_to_twitter"
        android:layout_above="@+id/tvWelcomeDescription"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/tvWelcomeDescription"
        android:layout_centerVertical="true"
        android:paddingTop="10dp"
        android:text="@string/welcome_description"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <android.support.percent.PercentRelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/btnLogin"
            android:layout_height="wrap_content"
            app:layout_widthPercent="60%"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="30dp"
            android:background="@drawable/rounded_corner"
            android:onClick="loginToRest"
            android:text="@string/login_label"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

    </android.support.percent.PercentRelativeLayout>

</RelativeLayout>